--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1>World's Biggest University</h1>
             <p>Making website is now one of the easiest thing in the world. You just need to learn HTML, CSS
             <br> Javascript and you are good to go.</p>
-            <a href="..." class="btn">Visit Us To Know More</a>
+            <a href="./index.html" class="btn">Visit Us To Know More</a>
         </section>
     </header>
 
@@ -157,7 +157,7 @@
     <section class="cta">
         <h1>Enroll For Our Various Online Course <br>
             Anywhere Form The World</h1>
-            <a href="#" class="btn">Contact Us</a>
+            <a href="./contact.html" class="btn">Contact Us</a>
     </section>
 
     <!-- about section -->
